--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"emos Blog",
+    "subTitle":"非官方博客",
+    "avatarUrl":"https://memos.top/assets/img/avatar.svg",
     "GMEEK_VERSION":"last"
 }
