--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "title":"Memos Blog",
     "subTitle":"非官方博客",
+    "displayTitle":"emos Blog"
     "avatarUrl":"https://memos.top/assets/img/avatar.svg",
     "commentLabelColor": "#006b75",
     "yearColorList": ["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
@@ -11,12 +12,12 @@
     "singlePage":["about"],
     "onePageListNum":10,
     "startSite":"10/10/2024",
-    "script": "<script>const linkElement = document.createElement('link'); linkElement.rel = 'stylesheet'; linkElement.href = 'https://cdn.imsun.org/lxgw-wenkai-screen-webfont/lxgwwenkaigbscreen.css'; linkElement.onload = function() { const styleElement = document.createElement('style'); styleElement.innerHTML = `* { font-family: \\\"LXGW WenKai Screen\\\", sans-serif !important; }`; document.head.appendChild(styleElement); }; document.head.appendChild(linkElement);</script>",
+    "script": "<script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/articletoc.js'></script><script>const linkElement = document.createElement('link'); linkElement.rel = 'stylesheet'; linkElement.href = 'https://cdn.imsun.org/lxgw-wenkai-screen-webfont/lxgwwenkaigbscreen.css'; linkElement.onload = function() { const styleElement = document.createElement('style'); styleElement.innerHTML = `* { font-family: \\\"LXGW WenKai Screen\\\", sans-serif !important; }`; document.head.appendChild(styleElement); }; document.head.appendChild(linkElement);</script>",
     "head": "",
-    "allHead": "",
+    "allHead": "<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script>",
     "indexStyle": "",
-    "indexScript": "<script>const linkElement = document.createElement('link'); linkElement.rel = 'stylesheet'; linkElement.href = 'https://cdn.imsun.org/lxgw-wenkai-screen-webfont/lxgwwenkaigbscreen.css'; linkElement.onload = function() { const styleElement = document.createElement('style'); styleElement.innerHTML = `* { font-family: \\\"LXGW WenKai Screen\\\", sans-serif !important; }`; document.head.appendChild(styleElement); }; document.head.appendChild(linkElement);</script>",
-    "showPostSource": 1,
+    "indexScript": "",
+    "showPostSource": 0,
     "rssSplit": "sentence",
     "GMEEK_VERSION":"last"
 }
