--- a/config.json
+++ b/config.json
@@ -7,11 +7,13 @@
     "yearColorList": ["#bc4c00", "#0969da", "#1f883d", "#A333D0"],
     "i18n": "CN",
     "UTC": 8,
-    "urlMode": "pinyin",
+    "iconList":{"memos":"M0 2.75C0 1.783.784 1 1.75 1h8.5c.967 0 1.75.783 1.75 1.75v5.5A1.75 1.75 0 0 1 10.25 10H7.061l-2.574 2.573A1.457 1.457 0 0 1 2 11.543V10h-.25A1.75 1.75 0 0 1 0 8.25Zm1.75-.25a.25.25 0 0 0-.25.25v5.5c0 .138.112.25.25.25h1a.75.75 0 0 1 .75.75v2.189L6.22 8.72a.747.747 0 0 1 .53-.22h3.5a.25.25 0 0 0 .25-.25v-5.5a.25.25 0 0 0-.25-.25Zm12.5 2h-.5a.75.75 0 0 1 0-1.5h.5c.967 0 1.75.783 1.75 1.75v5.5A1.75 1.75 0 0 1 14.25 12H14v1.543a1.457 1.457 0 0 1-2.487 1.03L9.22 12.28a.749.749 0 1 1 1.06-1.06l2.22 2.219V11.25a.75.75 0 0 1 .75-.75h1a.25.25 0 0 0 .25-.25v-5.5a.25.25 0 0 0-.25-.25ZM6.5 4v1.492l.466.187.036.015.812.375a.75.75 0 1 1-.628 1.362l-.795-.367-.92-.368A.75.75 0 0 1 5 6V4a.75.75 0 0 1 1.5 0Z"},
+    "exlink":{"memos":"https://www.memos.top/"},
+    "urlMode": "ru_translit",
     "style": "",
     "singlePage": ["about"],
     "onePageListNum": 10,
-    "startSite": "10/10/2024",
+    "startSite": "11/1/2024",
     "script": "<script src='https://blog.meekdai.com/Gmeek/plugins/lightbox.js'></script><script src='https://blog.meekdai.com/Gmeek/plugins/articletoc.js'></script>",
     "head": "",
     "allHead": "<script src='https://blog.meekdai.com/Gmeek/plugins/GmeekVercount.js'></script><script>const linkElement = document.createElement('link'); linkElement.rel = 'stylesheet'; linkElement.href = 'https://cdn.imsun.org/lxgw-wenkai-screen-webfont/lxgwwenkaigbscreen.css'; linkElement.onload = function() { const styleElement = document.createElement('style'); styleElement.innerHTML = `* { font-family: \\\"LXGW WenKai Screen\\\", sans-serif !important; }`; document.head.appendChild(styleElement); }; document.head.appendChild(linkElement);</script>",
